# TT-RISC-V-Example

./: CMakeLists.txt  README.md  main.cpp  tt_custom_buffer_manager.h
kernels/: mul.cpp
